Changes Lecture Notes

--- a/syllabus.html
+++ b/syllabus.html
@@ -136,6 +136,9 @@ img {
 <div id="ref-UML">
 <p>Shalev-Shwartz, Shai, and Shai Ben-David. 2014. <em>Understanding Machine Learning: From Theory to Algorithms</em>. New York, NY, USA: Cambridge University Press. <a href="http://www.cs.huji.ac.il/~shais/UnderstandingMachineLearning/understanding-machine-learning-theory-algorithms.pdf" class="uri">http://www.cs.huji.ac.il/~shais/UnderstandingMachineLearning/understanding-machine-learning-theory-algorithms.pdf</a>.</p>
 </div>
+<div id="ref-hdm">
+<p>Victor Chernozhukov, Martin Spindler, Chris Hansen. 2016. <em>hdm: High-Dimensional Metrics (Vignette)</em>.</p>
+</div>
 </div>
 </div>
 
