--- a/syllabus.html
+++ b/syllabus.html
@@ -61,9 +61,7 @@ img {
 
 <div id="header">
 <h1 class="title">Machine Learning in Econometrics</h1>
-<h4 class="date"><em><ol start="13" style="list-style-type: decimal">
-<li>Februar 2016</li>
-</ol></em></h4>
+<h4 class="date"><em>February 2016</em></h4>
 </div>
 
 
