--- a/Lecture_1.html
+++ b/Lecture_1.html
@@ -10,7 +10,7 @@
 
 
 
-  <meta name="date" content="2016-02-25" />
+  <meta name="date" content="2016-04-26" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -89,7 +89,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2016-02-25</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2016-04-26</p>
           </hgroup>
   </slide>
 
@@ -135,28 +135,28 @@
 
 <ul>
 <li><p><strong>Prediction</strong>: Given inputs \(X\), but not the output \(Y\), we want to predict \(Y\):\[ \hat{Y}=\hat{f}(X) \]We are interested in high quality predictions and not in the function \(f\) which is more or less considered as a black box.</p></li>
-<li><p><strong>Inference</strong>: Here the goal is understanding the relationship between \(Y\) and \(X\) and the form of \(f\). Related questions are which predictors are asscoiated with the response (model selection) and is the relationship linear or nonlinear.</p></li>
+<li><p><strong>Inference</strong>: Here the goal is understanding the relationship between \(Y\) and \(X\) and the form of \(f\). Related questions are which predictors are associated with the response (model selection) and is the relationship linear or nonlinear.</p></li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2>Basic Concepts </h2><h3> Trade-off between Prediction Accuracy and Model Interpretability</h3></hgroup><article  id="basic-concepts-trade-off-between-prediction-accuracy-and-model-interpretability">
 
-<p>Some methods are less flexible or more restrictive, meaning that the range of shapes of \(f\) they can estimate is restricted. Other methods are more flexible in this regard.<br/>Usually there is a tension between prediction accuracy and interpretability. This means that flexible models often deliver good prediction accuracy and give models wich are harder to interpret.</p>
+<p>Some methods are less flexible or more restrictive, meaning that the range of shapes of \(f\) they can estimate is restricted. Other methods are more flexible in this regard.<br/>Usually there is a tension between prediction accuracy and interpretability. This means that flexible models often deliver good prediction accuracy and give models which are harder to interpret.</p>
 
 <p>This will become clearer in Part I.</p>
 
 </article></slide><slide class=''><hgroup><h2>Basic Concepts </h2><h3> The Bias-Variance Trade-off I</h3></hgroup><article  id="basic-concepts-the-bias-variance-trade-off-i">
 
 <ul>
-<li><p>The mean squarred error (MSE) is defined as<br/>\[ MSE = 1/n \sum_{i=1}^n (y_i - \hat{f}(x_i))^2 \]</p></li>
-<li>Calculating the MSE for the sample used for estimation of \(f\) (traing set) might lead to <strong>overfitting</strong>.</li>
-<li><p>Hence, MSE for a new unseen sample (testing set) is preferrable:\[ MSE = Ave (y_0 - \hat{f}(x_0))^2 \]with a new observation \(x_0\)</p></li>
+<li><p>The mean squared error (MSE) is defined as<br/>\[ MSE = 1/n \sum_{i=1}^n (y_i - \hat{f}(x_i))^2 \]</p></li>
+<li>Calculating the MSE for the sample used for estimation of \(f\) (training set) might lead to <strong>overfitting</strong>.</li>
+<li><p>Hence, MSE for a new unseen sample (testing set) is preferable:\[ MSE = Ave (y_0 - \hat{f}(x_0))^2 \]with a new observation \(x_0\)</p></li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2>Basic Concepts </h2><h3> The Bias-Variance Trade-off II</h3></hgroup><article  id="basic-concepts-the-bias-variance-trade-off-ii">
 
 <ul>
 <li>We have the following decomposition\[ \mathbb{E} (y_0 - \hat{f}(x_0))^2 = \mathbb{Var}(\hat{f}(x_0)) + [Bias(\hat{f}(x_0))]^2 + \mathbb{Var}(\varepsilon) \]</li>
-<li>Varinace: amount by which \(\hat{f}\) changes if estimated by using a different training data set</li>
+<li>Variance: amount by which \(\hat{f}\) changes if estimated by using a different training data set</li>
 <li>Bias: error due to approximation the real relationship by a simpler model</li>
 <li>&quot;Bias-Variance Trade-off&quot;</li>
 </ul>
@@ -228,7 +228,7 @@
 
 <p>\[ \mathbb{P}(\max_{j=1,\ldots,p} |\varepsilon_j| \geq x) = 1 - (1- \mathbb{P}(|\varepsilon_1| \geq x))^p \approx p \mathbb{P}(|\varepsilon_1| \geq x).\]</p>
 
-<p>This means that if we want to bound the max of the absolute values wiht probability \(1-\alpha\), then we can only guarantee that the maximum is smaller than \((2\log(p/\alpha))^{1/2}\).</p>
+<p>This means that if we want to bound the max of the absolute values with probability \(1-\alpha\), then we can only guarantee that the maximum is smaller than \((2\log(p/\alpha))^{1/2}\).</p>
 
 </article></slide><slide class=''><hgroup><h2>Computational Complexity</h2></hgroup><article  id="computational-complexity">
 
